--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,59 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    testCompile group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+
+    testCompile 'org.testng:testng:6.1.1'
+
+    testCompile "com.aventstack:extentreports:4.0.9"
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+
+    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.27.0'
+
+    compile group: 'com.google.apis', name: 'google-api-services-sheets', version: 'v4-rev581-1.25.0'
+
+    compile group: 'com.google.oauth-client', name: 'google-oauth-client-jetty', version: '1.27.0'
+
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
+
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.14.0'
+
+    // https://mvnrepository.com/artifact/com.google.gdata/core
+    compile group: 'com.google.gdata', name: 'core', version: '1.47.1'
+
+    // https://mvnrepository.com/artifact/com.google.apis/google-api-services-drive
+    compile group: 'com.google.apis', name: 'google-api-services-drive', version: 'v3-rev173-1.25.0'
+
+    compile 'com.google.apis:google-api-services-gmail:v1-rev105-1.25.0'
+
+    // https://mvnrepository.com/artifact/com.github.javafaker/javafaker
+    compile group: 'com.github.javafaker', name: 'javafaker', version: '1.0.1'
+
+}
+
+test {
+    testLogging.showStandardStreams = true
+    testLogging.exceptionFormat = 'full'
+
+    /*useTestNG() {
+
+        // print(suites)
+        //print(browserType)
+
+        options.suites("/src/test/resources/testSuites/$ver/$suites/$testType-testng.xml")
+        //options.suites("/src/test/resources/testSuites/v1/qa/Taleo_PANDA-testng.xml")
+        systemProperty "ver", ver
+        systemProperty "env",suites
+        systemProperty "browserType",System.getProperty("browserType")
+
+
+
+    }*/
 }
